fixed #29 for real / implemented passive state for annotations / hidden scrollbars that might have appeared when zoomed in

--- a/Flaneur Extension/vis.css
+++ b/Flaneur Extension/vis.css
@@ -79,7 +79,7 @@ body{
 	left: 0px;
 	width: 100%;
 	bottom:  0px;
-	overflow: auto;
+	overflow: hidden;
 }
 
 #three{
@@ -151,8 +151,13 @@ body{
 	transition: opacity .1s;
 }
 
+.tag.passive{
+	background: #A6A6A6;
+	transition: background .4s;
+}
+
 .tag span{
-	background: #404040;
+	/*background: #404040;*/
 	color: #F2F2F2;
 	/*outline: 4px solid #404040;*/
 
